--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "form-data": "^4.0.3",
     "googleapis": "^150.0.1",
     "multer": "^2.0.1",
+    "node-fetch": "^2.7.0",
     "open": "^10.1.2"
   }
 }
