--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "form-data": "^4.0.3",
+    "formdata-node": "^6.0.3",
     "googleapis": "^150.0.1",
+    "mime-types": "^3.0.1",
     "multer": "^2.0.1",
     "node-fetch": "^2.7.0",
-    "open": "^10.1.2"
+    "open": "^10.1.2",
+    "undici": "^7.10.0"
   }
 }
